HW2/part4/t20.output
running e2c
redeclaration of variable k
redeclaration of variable i
compiling the C generated code
t20.c: In function ‘main’:
t20.c:4:5: error: expected identifier or ‘(’ before ‘,’ token
 int , ;
     ^
t20.c:5:5: error: expected identifier or ‘(’ before ‘,’ token
 int , ;
     ^
t20.c:6:5: error: expected identifier or ‘(’ before ‘,’ token
 int , , ;
     ^
t20.c:7:2: error: expected expression before ‘=’ token
  = 25;
  ^
t20.c:8:2: error: expected expression before ‘=’ token
  = 11;
  ^
t20.c:9:12: error: expected expression before ‘)’ token
 printf("", );
            ^
t20.c:10:19: error: expected expression before ‘)’ token
 while( 0 >= (10 - )){
                   ^
t20.c:12:2: error: expected expression before ‘=’ token
  = 20 - ;
  ^
t20.c:13:14: error: expected expression before ‘)’ token
 while( 0 >= ()){
              ^
t20.c:15:2: error: expected expression before ‘=’ token
  =  - 1;
  ^
t20.c:16:1: error: ‘else’ without a previous ‘if’
 else if( 0 >= (15 - )){
 ^
t20.c:16:21: error: expected expression before ‘)’ token
 else if( 0 >= (15 - )){
                     ^
t20.c:18:14: error: expected expression before ‘)’ token
 while( 0 >= ()){
              ^
t20.c:20:2: error: expected expression before ‘=’ token
  = 10 / ;
  ^
t20.c:21:12: error: expected expression before ‘)’ token
 printf("", );
            ^
t20.c:22:2: error: expected expression before ‘=’ token
  =  - 1;
  ^
t20.c:23:1: error: ‘else’ without a previous ‘if’
 else { = 10 - ;
 ^
t20.c:23:8: error: expected expression before ‘=’ token
 else { = 10 - ;
        ^
t20.c:24:14: error: expected expression before ‘)’ token
 while( 0 >= ()){
              ^
t20.c:26:2: error: expected expression before ‘=’ token
  =  - 1;
  ^
t20.c:27:2: error: expected expression before ‘=’ token
  =  - 1;
  ^
t20.c:28:12: error: expected expression before ‘)’ token
 printf("", );
            ^
t20.c:29:1: error: expected declaration or statement at end of input
 }
 ^
t20.c:29:1: error: expected declaration or statement at end of input
t20.c:29:1: error: expected declaration or statement at end of input
t20.c:29:1: error: expected declaration or statement at end of input
t20.c:29:1: error: expected declaration or statement at end of input
t20.c:29:1: error: expected declaration or statement at end of input
t20.c:29:1: error: expected declaration or statement at end of input
